--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-ca7b86aa-ade2-4db1-a4a9-4dce925cb814;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=apeazfrctacfap01d-server.postgres.database.azure.com;Database=apeazfrctacfap01d-database;Port=5432;Ssl Mode=Require;User Id=tsxxygswwd;Password=Q374SG1YFK0O68L2$;"
   }
 }
