--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=apeazfrctacfap01d-server.postgres.database.azure.com;Database=apeazfrctacfap01d-database;Port=5432;Ssl Mode=Require;User Id=tsxxygswwd;Password=Q374SG1YFK0O68L2$;"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=apeazfrctacfap01d-server.postgres.database.azure.com;Database=apeazfrctacfap01d-database;Ssl Mode=Require;User Id=tsxxygswwd;Password=Q374SG1YFK0O68L2$;"
   }
-}
+}8
